some minor changed and added footer

--- a/react/2/to-do-list/src/index.css
+++ b/react/2/to-do-list/src/index.css
@@ -1,13 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-nav{
-    display:flex;
-    gap: 44px;
-    background-color: rgb(62, 66, 66);
-    color:white;
-    padding: 13px;
-}
-li{
-    list-style: none;
-}
+body{background-color: rgb(197, 196, 196);}
